--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "google-safe-browsing": "^1.0.3",
     "mongoose": "^8.4.4",
     "process": "^0.11.10",
-    "react-dotenv": "^0.1.3"
+    "react-dotenv": "^0.1.3",
+    "react-router-dom": "^6.24.1"
   },
   "react-dotenv": {
     "whitelist": [
